--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,9 @@ github_username:  SieroSec
 
 # Build settings
 # theme: minima
+show_downloads: false
 theme: jekyll-theme-hacker
+google_analytics: 
 
 plugins:
   - jekyll-feed
@@ -42,14 +44,14 @@ plugins:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+exclude:
+   - .sass-cache/
+   - .jekyll-cache/
+   - gemfiles/
+   - Gemfile
+   - Gemfile.lock
+   - node_modules/
+   - vendor/bundle/
+   - vendor/cache/
+   - vendor/gems/
+   - vendor/ruby/
