--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,9 @@ show_downloads: false
 theme: jekyll-theme-hacker
 google_analytics: 
 
+excerpt_separator: <!--more-->
+
+
 plugins:
   - jekyll-feed
 
