--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: SieroSec
 email: SieroSec@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  SieroSec - IT Cyber security notes for everyone!
+  SieroSec - IT CyberSec notes for everyone!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://sierosec.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: SieroSec
@@ -31,10 +31,8 @@ github_username:  SieroSec
 # theme: minima
 show_downloads: false
 theme: jekyll-theme-hacker
-google_analytics: 
-
+google_analytics:
 excerpt_separator: <!--more-->
-
 
 plugins:
   - jekyll-feed
@@ -47,14 +45,14 @@ plugins:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-exclude:
-   - .sass-cache/
-   - .jekyll-cache/
-   - gemfiles/
-   - Gemfile
-   - Gemfile.lock
-   - node_modules/
-   - vendor/bundle/
-   - vendor/cache/
-   - vendor/gems/
-   - vendor/ruby/
+#exclude:
+#   - .sass-cache/
+#   - .jekyll-cache/
+#   - gemfiles/
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules/
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
